Motion and Random function added

--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
       </div>
       <!-- first set of photos -->
       <div class="image">
-<img src="./img/Scissor.jpg" alt="Scissor">
-<img src="./img/Scissor.jpg" alt="Scissor">      
+<img src="./img/Scissor.jpg" alt="Scissor" id="scissor1">
+<img src="./img/Scissor.jpg" alt="Scissor" id="scissor2">      
 </div>
 
       <!-- second set of photos -->
       <div class="image">
-<img src="./img/Rock.png" alt="">
-<img src="./img/Rock.png" alt="">
+<img src="./img/Rock.png" alt="" id="stone1">
+<img src="./img/Rock.png" alt="" id="stone2">
       </div>
       <!-- third set of photos -->
       <div class="image">
-<img src="./img/Paper.jpg" alt="">
-<img src="./img/Paper.jpg" alt="">
+<img src="./img/Paper.jpg" alt="" id="paper1">
+<img src="./img/Paper.jpg" alt="" id="paper2">
       </div>
       <!-- for buttons -->
       <div class="image button">
-    <button>Stone</button>
-<button>Paper</button>
-<button>Scissor</button>
+    <button type="button" onclick="Stone()" id="button1">Stone</button>
+<button type="button" onclick="Paper()" id="button2">Paper</button>
+<button type="button" onclick="Scissor()" id="button3">Scissor</button>
       </div>
     </div>
   </div>
