--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <th>Computer</th>
           </tr>
           <tr>
-            <td>0</td>
-            <td>0</td>
+            <td id="item-1">0</td>
+            <td id="item-2">0</td>
           </tr>
 
 
@@ -60,25 +60,25 @@
       </div>
       <!-- first set of photos -->
       <div class="image">
-<img src="./img/Scissor.jpg" alt="Scissor" id="scissor1">
-<img src="./img/Scissor.jpg" alt="Scissor" id="scissor2">      
-</div>
+        <img src="./img/Scissor.jpg" alt="Scissor" id="scissor1">
+        <img src="./img/Scissor.jpg" alt="Scissor" id="scissor2">
+      </div>
 
       <!-- second set of photos -->
       <div class="image">
-<img src="./img/Rock.png" alt="" id="stone1">
-<img src="./img/Rock.png" alt="" id="stone2">
+        <img src="./img/Rock.png" alt="" id="stone1">
+        <img src="./img/Rock.png" alt="" id="stone2">
       </div>
       <!-- third set of photos -->
       <div class="image">
-<img src="./img/Paper.jpg" alt="" id="paper1">
-<img src="./img/Paper.jpg" alt="" id="paper2">
+        <img src="./img/Paper.jpg" alt="" id="paper1">
+        <img src="./img/Paper.jpg" alt="" id="paper2">
       </div>
       <!-- for buttons -->
       <div class="image button">
-    <button type="button" onclick="Stone()" id="button1">Stone</button>
-<button type="button" onclick="Paper()" id="button2">Paper</button>
-<button type="button" onclick="Scissor()" id="button3">Scissor</button>
+        <button type="button" onclick="Stone()" id="button1">Stone</button>
+        <button type="button" onclick="Paper()" id="button2">Paper</button>
+        <button type="button" onclick="Scissor()" id="button3">Scissor</button>
       </div>
     </div>
   </div>
