Restart and next functional buttons added

--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
       </div>
       <!-- for buttons -->
       <div class="image button">
+        <button type="button" onclick="location.reload()" id="button0">Restart</button>
         <button type="button" onclick="Stone()" id="button1">Stone</button>
         <button type="button" onclick="Paper()" id="button2">Paper</button>
         <button type="button" onclick="Scissor()" id="button3">Scissor</button>
+        <button type="button" onclick="defaultLocation()" id="button4">Next</button>
       </div>
     </div>
   </div>
